@startuml vehiculos

class Persona {
    - cedula: str
    - nombres: str
    - apellidos: str
    - fecha_de_nacimiento: date
}

class Licencia {
    - tipo: str
    - fecha_de_emision: date
    - fecha_de_caducidad: date
    - puntos: int
    + esta_vigente(): bool
}

class Conductor {
    - licencia: Licencia
}

class Kilometraje {
    - vehiculo: Vehiculo
    - kilometraje: float
    - unidad: str
    - fecha: date
}

class Vehiculo {
    - propietario: Propietario
    - cilindraje: float
    - tonelaje: float
    - unidad_carburante: float
    - combustible: str
    - condicion: str
    - fotografia: ImageField
    - marca: str
    - modelo: str
    - placa: str
    - anio_de_fabricacion: int
    - color: str
    - numero_de_chasis: str
    - foto: ImageField
    + agregar_kilometraje(valor: float, unidad: str): void
    + bitacora: QuerySet
}

class Propietario {

}

class OperacionMantenimiento {
    - tarea: str
    - sistema: str
    - sub_sistema: str
    - frecuencia: float
    - unidad: str
}

class HojaMantenimiento {
    - vehiculo: Vehiculo
    - operaciones: list[OperacionMantenimiento]
    - frecuencia_minima: float
    - final_ciclo: float
}

class Llanta {
    - vehiculo: Vehiculo
    - codigo_de_fabricacion: str
    - posicion_respecto_al_vehiculo: str
}

Persona <|-- Conductor
Persona <|-- Propietario
Conductor "1" --> "1" Licencia
Vehiculo o--> "*" Kilometraje : - bitacora
Vehiculo o--> "*" Llanta
Vehiculo o--> "1" HojaMantenimiento
HojaMantenimiento --> "*" OperacionMantenimiento
Propietario --> "*" Vehiculo

@enduml